--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"
     integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link id="dynamic-style" rel="stylesheet" href="style.css">
+  <link id="dynamic-style" rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tdx Server</title>
@@ -65,12 +65,12 @@
       <p class="flex center">
         <span>Don't have an account?</span>
         <button onclick="openpopup('singup')" class="btn cr">Create Account</button>
-      <hr>
+        <hr>
       <p class="flex center">
         connect with
       </p>
       <div class="flex center colam" onclick="working()">
-        <div class="contbtn github" >
+        <div class="contbtn github">
           <i class="fab fa-github"></i>
           Github
         </div>
@@ -142,7 +142,7 @@
         connect with
       </p>
       <div class="flex center colam" onclick="working()">
-        <div class="contbtn github" >
+        <div class="contbtn github">
           <i class="fab fa-github"></i>
           Github
         </div>
@@ -160,6 +160,50 @@
   </div>
 
 
+    
+  <!-- UIUX -->
+  <section class="end">
+  
+    <div class="flex center">
+      <div class="flex mbaround style padding">
+        <div>
+         
+          <p class="">
+            <blockquote>
+
+            <span class="font:20px otc">TDX Server</span>
+            <br>
+            <span class="font:40px textstyle">Free Cloud And Stroge</span><br>
+            <span class="otc">Upload your Photo, Video and Document with shear Link</span>
+            <br>
+          </blockquote>
+            <div>
+              <blockquote class="flex">
+                <div class="btnbox">
+                  <button onclick="openpopup('login')" class="btn cr">singin</button>
+                  <button onclick="openpopup('singup')" class="btn cr active">Create Account</button>
+                </div>
+              </blockquote>
+            </div>
+          </p>
+        </div>
+        <div class="mvc">
+          <img height="300px" class="img" src="/src/img/home.png" alt="" srcset="">
+        </div>
+      </div>
+    </div>
+
+    <div class="end1">
+
+    </div>
+
+  </section>
+
+
+
+
+
+
 
 
 
@@ -167,7 +211,7 @@
 
   <!-- Project JavaScript -->
   <script id="dynamic-script" src="src/js/script.js"></script>
-<script src="cachebuster.js"></script> 
+  <script src="cachebuster.js"></script>
 </body>
 
 </html>
